tests/baselines/reference/jsxChildWrongType.errors.txt
index.tsx(6,5): error TS2322: Type 'unknown' is not assignable to type 'ReactNode'.


==== index.tsx (1 errors) ====
    /// <reference path="/.lib/react18/react18.d.ts" />
    /// <reference path="/.lib/react18/global.d.ts" />
    
    const a = (
      <main>
        {(<div />) as unknown}
        ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'unknown' is not assignable to type 'ReactNode'.
        <span />
      </main>
    );
    